--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -4,8 +4,23 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  title: MyString1
+  description: MyText
+  image_url: lorem.jpg
+  price: 9.99
+
+two:
+  title: MyString2
+  description: MyText
+  image_url: lorem.jpg
+  price: 9.99
+
+ruby:
+  title: Programming Ruby 1.9
+  description:
+    Ruby is the fastest growing and most exciting dynamic
+    language out there. If you need to get working programs
+    delivered fast, you should add Ruby to your toolbox.
+  price: 49.50
+  image_url: ruby.jpg
